# synapse-cpp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  build.sh  release-please-config.json  vcpkg.json
.github/workflows/: build-test.yml  main.yml
cmake/: Config.cmake.in
examples/binned_spikes/: main.cpp
examples/stats/: main.cpp  packet_monitoring.cpp  packet_monitoring.h
examples/stream_out/: main.cpp
examples/tap/: main.cpp
include/science/synapse/: channel.h  channel_mask.h  config.h  data.h  device.h  device_advertisement.h  node.h  signal_config.h  status.h  tap.h  version.h.in
include/science/synapse/nodes/: broadband_source.h  disk_writer.h  electrical_broadband.h  electrical_stim.h  electrical_stimulation.h  optical_broadband.h  optical_stim.h  optical_stimulation.h  spectral_filter.h  spike_binner.h  spike_detect.h  spike_detector.h  spike_source.h  stream_in.h  stream_out.h  udp_node.h
include/science/synapse/util/: discover.h  ndtp.h  ndtp_types.h
src/cli/: cli.cpp  cli.h  main.cpp
src/science/synapse/: channel_mask.cpp  config.cpp  device.cpp  node.cpp  signal_config.cpp  tap.cpp
src/science/synapse/nodes/: broadband_source.cpp  disk_writer.cpp  electrical_broadband.cpp  electrical_stim.cpp  electrical_stimulation.cpp  optical_broadband.cpp  optical_stim.cpp  optical_stimulation.cpp  spectral_filter.cpp  spike_binner.cpp  spike_detect.cpp  spike_detector.cpp  spike_source.cpp  stream_in.cpp  stream_out.cpp  udp_node.cpp
src/science/synapse/util/: discover.cpp  ndtp.cpp  ndtp_types.cpp
test/: test_discover.cpp  test_ndtp.cpp
test/nodes/: test_stream_out.cpp
